crates/servicepoint_binding_uniffi/libraries/swift/servicepoint_binding_uniffiFFI.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V4 in this file.           ⚠️

typedef struct RustBuffer
{
    uint64_t capacity;
    uint64_t len;
    uint8_t *_Nullable data;
} RustBuffer;
// Error definitions
typedef struct RustCallStatus {
    int8_t code;
    RustBuffer errorBuf;
} RustCallStatus;
typedef void (*UniffiRustFutureContinuationCallback)(uint64_t, int8_t
    );
void ffi_servicepoint_binding_uniffi_rust_future_free_rust_buffer(uint64_t handle
);
RustBuffer ffi_servicepoint_binding_uniffi_rust_future_complete_rust_buffer(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_servicepoint_binding_uniffi_rust_future_poll_void(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_servicepoint_binding_uniffi_rust_future_cancel_void(uint64_t handle
);
void ffi_servicepoint_binding_uniffi_rust_future_free_void(uint64_t handle
);
void ffi_servicepoint_binding_uniffi_rust_future_complete_void(uint64_t handle, RustCallStatus *_Nonnull out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_bitvec_copy_raw(void
    
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_bitvec_equals(void
    
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_bitvec_fill(void
    
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_bitvec_get(void
    
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_bitvec_len(void
    
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_bitvec_set(void
    
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_bitmap_copy_raw(void
    
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_bitmap_equals(void
    
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_bitmap_fill(void
    
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_bitmap_get(void
    
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_bitmap_height(void
    
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_bitmap_set(void
    
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_bitmap_width(void
    
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_brightnessgrid_copy_raw(void
    
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_brightnessgrid_equals(void
    
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_brightnessgrid_fill(void
    
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_brightnessgrid_get(void
    
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_brightnessgrid_height(void
    
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_brightnessgrid_set(void
    
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_brightnessgrid_width(void
    
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_chargrid_as_string(void
    
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_chargrid_equals(void
    
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_chargrid_fill(void
    
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_chargrid_get(void
    
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_chargrid_height(void
    
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_chargrid_set(void
    
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_chargrid_width(void
    
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_command_equals(void
    
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_connection_send(void
    
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_cp437grid_copy_raw(void
    
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_cp437grid_equals(void
    
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_cp437grid_fill(void
    
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_cp437grid_get(void
    
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_cp437grid_height(void
    
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_cp437grid_set(void
    
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_cp437grid_width(void
    
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_bitvec_clone(void
    
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_bitvec_load(void
    
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_bitvec_new(void
    
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_bitmap_clone(void
    
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_bitmap_load(void
    
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_bitmap_new(void
    
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_bitmap_new_max_sized(void
    
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_brightnessgrid_clone(void
    
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_brightnessgrid_load(void
    
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_brightnessgrid_new(void
    
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_chargrid_clone(void
    
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_chargrid_load(void
    
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_chargrid_new(void
    
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_command_bitmap_linear(void
    
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_command_bitmap_linear_and(void
    
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_command_bitmap_linear_or(void
    
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_command_bitmap_linear_win(void
    
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_command_bitmap_linear_xor(void
    
);