crates/servicepoint_binding_uniffi/libraries/python/servicepoint_binding_uniffi.py

_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_free_rust_buffer.restype = None
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_complete_rust_buffer.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_complete_rust_buffer.restype = _UniffiRustBuffer
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_poll_void.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_poll_void.restype = None
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_cancel_void.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_cancel_void.restype = None
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_free_void.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_free_void.restype = None
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_complete_void.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_complete_void.restype = None
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_method_bitvec_copy_raw.argtypes = (
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_method_bitvec_copy_raw.restype = ctypes.c_uint16
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_method_bitvec_equals.argtypes = (
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_method_bitvec_equals.restype = ctypes.c_uint16
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_method_bitvec_fill.argtypes = (
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_method_bitvec_fill.restype = ctypes.c_uint16
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_method_bitvec_get.argtypes = (
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_method_bitvec_get.restype = ctypes.c_uint16
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_method_bitvec_len.argtypes = (
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_method_bitvec_len.restype = ctypes.c_uint16
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_method_bitvec_set.argtypes = (
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_method_bitvec_set.restype = ctypes.c_uint16
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_method_bitmap_copy_raw.argtypes = (
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_method_bitmap_copy_raw.restype = ctypes.c_uint16
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_method_bitmap_equals.argtypes = (
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_method_bitmap_equals.restype = ctypes.c_uint16
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_method_bitmap_fill.argtypes = (
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_method_bitmap_fill.restype = ctypes.c_uint16
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_method_bitmap_get.argtypes = (
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_method_bitmap_get.restype = ctypes.c_uint16
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_method_bitmap_height.argtypes = (
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_method_bitmap_height.restype = ctypes.c_uint16
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_method_bitmap_set.argtypes = (
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_method_bitmap_set.restype = ctypes.c_uint16
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_method_bitmap_width.argtypes = (
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_method_bitmap_width.restype = ctypes.c_uint16
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_method_brightnessgrid_copy_raw.argtypes = (
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_method_brightnessgrid_copy_raw.restype = ctypes.c_uint16
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_method_brightnessgrid_equals.argtypes = (
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_method_brightnessgrid_equals.restype = ctypes.c_uint16
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_method_brightnessgrid_fill.argtypes = (
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_method_brightnessgrid_fill.restype = ctypes.c_uint16
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_method_brightnessgrid_get.argtypes = (
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_method_brightnessgrid_get.restype = ctypes.c_uint16
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_method_brightnessgrid_height.argtypes = (
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_method_brightnessgrid_height.restype = ctypes.c_uint16
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_method_brightnessgrid_set.argtypes = (
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_method_brightnessgrid_set.restype = ctypes.c_uint16
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_method_brightnessgrid_width.argtypes = (
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_method_brightnessgrid_width.restype = ctypes.c_uint16
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_method_chargrid_as_string.argtypes = (
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_method_chargrid_as_string.restype = ctypes.c_uint16
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_method_chargrid_equals.argtypes = (
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_method_chargrid_equals.restype = ctypes.c_uint16
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_method_chargrid_fill.argtypes = (
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_method_chargrid_fill.restype = ctypes.c_uint16
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_method_chargrid_get.argtypes = (
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_method_chargrid_get.restype = ctypes.c_uint16
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_method_chargrid_height.argtypes = (
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_method_chargrid_height.restype = ctypes.c_uint16
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_method_chargrid_set.argtypes = (
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_method_chargrid_set.restype = ctypes.c_uint16
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_method_chargrid_width.argtypes = (
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_method_chargrid_width.restype = ctypes.c_uint16
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_method_command_equals.argtypes = (
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_method_command_equals.restype = ctypes.c_uint16
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_method_connection_send.argtypes = (
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_method_connection_send.restype = ctypes.c_uint16
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_method_cp437grid_copy_raw.argtypes = (
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_method_cp437grid_copy_raw.restype = ctypes.c_uint16
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_method_cp437grid_equals.argtypes = (
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_method_cp437grid_equals.restype = ctypes.c_uint16
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_method_cp437grid_fill.argtypes = (
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_method_cp437grid_fill.restype = ctypes.c_uint16
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_method_cp437grid_get.argtypes = (
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_method_cp437grid_get.restype = ctypes.c_uint16
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_method_cp437grid_height.argtypes = (
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_method_cp437grid_height.restype = ctypes.c_uint16
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_method_cp437grid_set.argtypes = (
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_method_cp437grid_set.restype = ctypes.c_uint16
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_method_cp437grid_width.argtypes = (
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_method_cp437grid_width.restype = ctypes.c_uint16
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_constructor_bitvec_clone.argtypes = (
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_constructor_bitvec_clone.restype = ctypes.c_uint16
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_constructor_bitvec_load.argtypes = (
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_constructor_bitvec_load.restype = ctypes.c_uint16
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_constructor_bitvec_new.argtypes = (
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_constructor_bitvec_new.restype = ctypes.c_uint16
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_constructor_bitmap_clone.argtypes = (
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_constructor_bitmap_clone.restype = ctypes.c_uint16
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_constructor_bitmap_load.argtypes = (
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_constructor_bitmap_load.restype = ctypes.c_uint16
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_constructor_bitmap_new.argtypes = (
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_constructor_bitmap_new.restype = ctypes.c_uint16
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_constructor_bitmap_new_max_sized.argtypes = (
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_constructor_bitmap_new_max_sized.restype = ctypes.c_uint16
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_constructor_brightnessgrid_clone.argtypes = (
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_constructor_brightnessgrid_clone.restype = ctypes.c_uint16
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_constructor_brightnessgrid_load.argtypes = (
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_constructor_brightnessgrid_load.restype = ctypes.c_uint16
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_constructor_brightnessgrid_new.argtypes = (
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_constructor_brightnessgrid_new.restype = ctypes.c_uint16
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_constructor_chargrid_clone.argtypes = (
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_constructor_chargrid_clone.restype = ctypes.c_uint16
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_constructor_chargrid_load.argtypes = (
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_constructor_chargrid_load.restype = ctypes.c_uint16
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_constructor_chargrid_new.argtypes = (
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_constructor_chargrid_new.restype = ctypes.c_uint16
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_constructor_command_bitmap_linear.argtypes = (
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_constructor_command_bitmap_linear.restype = ctypes.c_uint16
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_constructor_command_bitmap_linear_and.argtypes = (
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_constructor_command_bitmap_linear_and.restype = ctypes.c_uint16
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_constructor_command_bitmap_linear_or.argtypes = (
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_constructor_command_bitmap_linear_or.restype = ctypes.c_uint16
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_constructor_command_bitmap_linear_win.argtypes = (
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_constructor_command_bitmap_linear_win.restype = ctypes.c_uint16
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_constructor_command_bitmap_linear_xor.argtypes = (
)
